--- a/firmware/PCB Oven Controller.ioc
+++ b/firmware/PCB Oven Controller.ioc
@@ -1,17 +1,4 @@
 #MicroXplorer Configuration settings - do not modify
-FATFS.BSP.number=1
-FATFS0.BSP.STBoard=false
-FATFS0.BSP.api=Unknown
-FATFS0.BSP.component=
-FATFS0.BSP.condition=
-FATFS0.BSP.i2caddr=0
-FATFS0.BSP.i2creg=
-FATFS0.BSP.instance=PB14
-FATFS0.BSP.ip=GPIO
-FATFS0.BSP.mode=Input
-FATFS0.BSP.name=Detect_SDIO
-FATFS0.BSP.semaphore=
-FATFS0.BSP.solution=PB14
 FREERTOS.IPParameters=Tasks01,configENABLE_FPU
 FREERTOS.Tasks01=defaultTask,24,128,StartDefaultTask,Default,NULL,Dynamic,NULL,NULL
 FREERTOS.configENABLE_FPU=1
@@ -25,8 +12,10 @@ Mcu.IP1=FATFS
 Mcu.IP10=SPI1
 Mcu.IP11=SYS
 Mcu.IP12=TIM2
-Mcu.IP13=USART1
-Mcu.IP14=USB_OTG_FS
+Mcu.IP13=TIM3
+Mcu.IP14=USART1
+Mcu.IP15=USART2
+Mcu.IP16=USB_OTG_FS
 Mcu.IP2=FREERTOS
 Mcu.IP3=I2C1
 Mcu.IP4=I2C3
@@ -35,39 +24,51 @@ Mcu.IP6=NVIC
 Mcu.IP7=RCC
 Mcu.IP8=RTC
 Mcu.IP9=SDIO
-Mcu.IPNb=15
+Mcu.IPNb=17
 Mcu.Name=STM32F411C(C-E)Ux
 Mcu.Package=UFQFPN48
-Mcu.Pin0=PH0 - OSC_IN
-Mcu.Pin1=PH1 - OSC_OUT
-Mcu.Pin10=PA9
-Mcu.Pin11=PA10
-Mcu.Pin12=PA11
-Mcu.Pin13=PA12
-Mcu.Pin14=PA13
-Mcu.Pin15=PA14
-Mcu.Pin16=PB3
-Mcu.Pin17=PB4
-Mcu.Pin18=PB6
-Mcu.Pin19=PB7
-Mcu.Pin2=PA0-WKUP
-Mcu.Pin20=PB8
-Mcu.Pin21=PB9
-Mcu.Pin22=VP_CRC_VS_CRC
-Mcu.Pin23=VP_FATFS_VS_SDIO
-Mcu.Pin24=VP_FREERTOS_VS_CMSIS_V2
-Mcu.Pin25=VP_IWDG_VS_IWDG
-Mcu.Pin26=VP_RTC_VS_RTC_Activate
-Mcu.Pin27=VP_SYS_VS_tim9
-Mcu.Pin28=VP_TIM2_VS_ClockSourceINT
-Mcu.Pin3=PA2
-Mcu.Pin4=PA5
-Mcu.Pin5=PA6
-Mcu.Pin6=PA7
-Mcu.Pin7=PB14
-Mcu.Pin8=PB15
-Mcu.Pin9=PA8
-Mcu.PinsNb=29
+Mcu.Pin0=PC13-ANTI_TAMP
+Mcu.Pin1=PC14-OSC32_IN
+Mcu.Pin10=PA6
+Mcu.Pin11=PA7
+Mcu.Pin12=PB0
+Mcu.Pin13=PB1
+Mcu.Pin14=PB2
+Mcu.Pin15=PB10
+Mcu.Pin16=PB12
+Mcu.Pin17=PB13
+Mcu.Pin18=PB14
+Mcu.Pin19=PB15
+Mcu.Pin2=PC15-OSC32_OUT
+Mcu.Pin20=PA8
+Mcu.Pin21=PA9
+Mcu.Pin22=PA10
+Mcu.Pin23=PA11
+Mcu.Pin24=PA12
+Mcu.Pin25=PA13
+Mcu.Pin26=PA14
+Mcu.Pin27=PA15
+Mcu.Pin28=PB3
+Mcu.Pin29=PB4
+Mcu.Pin3=PH0 - OSC_IN
+Mcu.Pin30=PB6
+Mcu.Pin31=PB7
+Mcu.Pin32=PB8
+Mcu.Pin33=PB9
+Mcu.Pin34=VP_CRC_VS_CRC
+Mcu.Pin35=VP_FATFS_VS_SDIO
+Mcu.Pin36=VP_FREERTOS_VS_CMSIS_V2
+Mcu.Pin37=VP_IWDG_VS_IWDG
+Mcu.Pin38=VP_RTC_VS_RTC_Activate
+Mcu.Pin39=VP_SYS_VS_tim9
+Mcu.Pin4=PH1 - OSC_OUT
+Mcu.Pin40=VP_TIM2_VS_ClockSourceINT
+Mcu.Pin5=PA0-WKUP
+Mcu.Pin6=PA1
+Mcu.Pin7=PA2
+Mcu.Pin8=PA3
+Mcu.Pin9=PA5
+Mcu.PinsNb=41
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F411CEUx
@@ -90,34 +91,83 @@ NVIC.TIM1_BRK_TIM9_IRQn=true\:15\:0\:false\:false\:true\:false\:false\:true\:tru
 NVIC.TimeBase=TIM1_BRK_TIM9_IRQn
 NVIC.TimeBaseIP=TIM9
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:true
-PA0-WKUP.Signal=S_TIM2_CH1_ETR
+PA0-WKUP.Locked=true
+PA1.Locked=true
+PA10.GPIOParameters=GPIO_Label
+PA10.GPIO_Label=RX
 PA10.Mode=Asynchronous
 PA10.Signal=USART1_RX
+PA11.GPIOParameters=GPIO_Label
+PA11.GPIO_Label=USB_DM
 PA11.Mode=Host_Only
 PA11.Signal=USB_OTG_FS_DM
+PA12.GPIOParameters=GPIO_Label
+PA12.GPIO_Label=USB_DP
 PA12.Mode=Host_Only
 PA12.Signal=USB_OTG_FS_DP
+PA13.GPIOParameters=GPIO_Label
+PA13.GPIO_Label=SWDIO
 PA13.Mode=Trace_Asynchronous_SW
 PA13.Signal=SYS_JTMS-SWDIO
+PA14.GPIOParameters=GPIO_Label
+PA14.GPIO_Label=SWCLK
 PA14.Mode=Trace_Asynchronous_SW
 PA14.Signal=SYS_JTCK-SWCLK
-PA2.Signal=S_TIM2_CH3
+PA15.GPIOParameters=GPIO_Label
+PA15.GPIO_Label=PWM0
+PA15.Signal=S_TIM2_CH1_ETR
+PA2.GPIOParameters=GPIO_Label
+PA2.GPIO_Label=UART2_TX
+PA2.Mode=Asynchronous
+PA2.Signal=USART2_TX
+PA3.GPIOParameters=GPIO_Label
+PA3.GPIO_Label=UART2_RX
+PA3.Mode=Asynchronous
+PA3.Signal=USART2_RX
+PA5.GPIOParameters=GPIO_Label
+PA5.GPIO_Label=SPI_SCK
 PA5.Mode=Full_Duplex_Master
 PA5.Signal=SPI1_SCK
 PA6.Mode=SD_1_bit
 PA6.Signal=SDIO_CMD
+PA7.GPIOParameters=GPIO_Label
+PA7.GPIO_Label=SPI_MOSI
 PA7.Mode=Full_Duplex_Master
 PA7.Signal=SPI1_MOSI
 PA8.Mode=I2C
 PA8.Signal=I2C3_SCL
+PA9.GPIOParameters=GPIO_Label
+PA9.GPIO_Label=TX
 PA9.Mode=Asynchronous
 PA9.Signal=USART1_TX
+PB0.GPIOParameters=GPIO_Label
+PB0.GPIO_Label=DIMMER_SYNC
+PB0.Signal=S_TIM3_CH3
+PB1.Locked=true
+PB10.GPIOParameters=GPIO_Label
+PB10.GPIO_Label=PWM1
+PB10.Signal=S_TIM2_CH3
+PB12.GPIOParameters=GPIO_Label
+PB12.GPIO_Label=GPIO2
+PB12.Locked=true
+PB12.Signal=GPIO_Input
+PB13.GPIOParameters=GPIO_Label
+PB13.GPIO_Label=GPIO1
+PB13.Locked=true
+PB13.Signal=GPIO_Input
+PB14.GPIOParameters=GPIO_Label
+PB14.GPIO_Label=GPIO0
 PB14.Locked=true
 PB14.Signal=GPIO_Input
 PB15.Mode=SD_1_bit
 PB15.Signal=SDIO_CK
+PB2.Locked=true
+PB3.GPIOParameters=GPIO_Label
+PB3.GPIO_Label=SWO
 PB3.Mode=Trace_Asynchronous_SW
 PB3.Signal=SYS_JTDO-SWO
+PB4.GPIOParameters=GPIO_Label
+PB4.GPIO_Label=SPI_MISO
 PB4.Mode=Full_Duplex_Master
 PB4.Signal=SPI1_MISO
 PB6.Mode=I2C
@@ -128,6 +178,9 @@ PB8.Mode=I2C
 PB8.Signal=I2C3_SDA
 PB9.Mode=I2C
 PB9.Signal=I2C1_SDA
+PC13-ANTI_TAMP.Locked=true
+PC14-OSC32_IN.Locked=true
+PC15-OSC32_OUT.Locked=true
 PH0\ -\ OSC_IN.GPIOParameters=GPIO_Label
 PH0\ -\ OSC_IN.GPIO_Label=HSE_IN
 PH0\ -\ OSC_IN.Mode=HSE-External-Oscillator
@@ -164,7 +217,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_IWDG_Init-IWDG-false-HAL-true,4-MX_RTC_Init-RTC-false-HAL-true,5-MX_I2C1_Init-I2C1-false-HAL-true,6-MX_SDIO_SD_Init-SDIO-false-HAL-true,7-MX_CRC_Init-CRC-false-HAL-true,8-MX_TIM2_Init-TIM2-false-HAL-true,9-MX_FATFS_Init-FATFS-false-HAL-false,10-MX_I2C3_Init-I2C3-false-HAL-true,11-MX_SPI1_Init-SPI1-false-HAL-true,12-MX_USB_OTG_FS_HCD_Init-USB_OTG_FS-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_IWDG_Init-IWDG-false-HAL-true,4-MX_RTC_Init-RTC-false-HAL-true,5-MX_I2C1_Init-I2C1-false-HAL-true,6-MX_SDIO_SD_Init-SDIO-false-HAL-true,7-MX_CRC_Init-CRC-false-HAL-true,8-MX_TIM2_Init-TIM2-false-HAL-true,9-MX_FATFS_Init-FATFS-false-HAL-false,10-MX_I2C3_Init-I2C3-false-HAL-true,11-MX_SPI1_Init-SPI1-false-HAL-true,12-MX_USB_OTG_FS_HCD_Init-USB_OTG_FS-false-HAL-true,13-MX_USART1_UART_Init-USART1-false-HAL-true,14-MX_USART2_UART_Init-USART2-false-HAL-true
 RCC.48MHZClocksFreq_Value=48000000
 RCC.AHBFreq_Value=96000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV2
@@ -180,7 +233,8 @@ RCC.HCLKFreq_Value=96000000
 RCC.HSE_VALUE=25000000
 RCC.HSI_VALUE=16000000
 RCC.I2SClocksFreq_Value=150000000
-RCC.IPParameters=48MHZClocksFreq_Value,AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,CortexFreq_Value,EthernetFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI_VALUE,I2SClocksFreq_Value,LSI_VALUE,MSICalibrationValue,PLLCLKFreq_Value,PLLM,PLLN,PLLP,PLLQ,PLLQCLKFreq_Value,RTCFreq_Value,RTCHSEDivFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,VCOI2SOutputFreq_Value,VCOInputFreq_Value,VCOInputMFreq_Value,VCOOutputFreq_Value,VcooutputI2S
+RCC.IPParameters=48MHZClocksFreq_Value,AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,CortexFreq_Value,EthernetFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI_VALUE,I2SClocksFreq_Value,LSE_VALUE,LSI_VALUE,MSICalibrationValue,PLLCLKFreq_Value,PLLM,PLLN,PLLP,PLLQ,PLLQCLKFreq_Value,RTCFreq_Value,RTCHSEDivFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,VCOI2SOutputFreq_Value,VCOInputFreq_Value,VCOInputMFreq_Value,VCOOutputFreq_Value,VcooutputI2S
+RCC.LSE_VALUE=32768
 RCC.LSI_VALUE=32000
 RCC.MSICalibrationValue=0
 RCC.PLLCLKFreq_Value=96000000
@@ -200,19 +254,26 @@ RCC.VCOOutputFreq_Value=384000000
 RCC.VcooutputI2S=150000000
 SH.S_TIM2_CH1_ETR.0=TIM2_CH1,PWM Generation1 CH1
 SH.S_TIM2_CH1_ETR.ConfNb=1
-SH.S_TIM2_CH3.0=TIM2_CH3,PWM Generation3 CH3
+SH.S_TIM2_CH3.0=TIM2_CH3,Output Compare3 CH3
 SH.S_TIM2_CH3.ConfNb=1
+SH.S_TIM3_CH3.0=TIM3_CH3,Input_Capture3_from_TI3
+SH.S_TIM3_CH3.ConfNb=1
 SPI1.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_2
 SPI1.CalculateBaudRate=48.0 MBits/s
 SPI1.Direction=SPI_DIRECTION_2LINES
 SPI1.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,BaudRatePrescaler
 SPI1.Mode=SPI_MODE_MASTER
 SPI1.VirtualType=VM_MASTER
+TIM2.Channel-Output\ Compare3\ CH3=TIM_CHANNEL_3
 TIM2.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
-TIM2.Channel-PWM\ Generation3\ CH3=TIM_CHANNEL_3
-TIM2.IPParameters=Channel-PWM Generation1 CH1,Channel-PWM Generation3 CH3
+TIM2.IPParameters=Channel-PWM Generation1 CH1,Channel-Output Compare3 CH3
+TIM3.Channel-Input_Capture3_from_TI3=TIM_CHANNEL_3
+TIM3.IPParameters=Channel-Input_Capture3_from_TI3,Period
+TIM3.Period=65535
 USART1.IPParameters=VirtualMode
 USART1.VirtualMode=VM_ASYNC
+USART2.IPParameters=VirtualMode
+USART2.VirtualMode=VM_ASYNC
 USB_OTG_FS.IPParameters=VirtualMode,phy_itface
 USB_OTG_FS.VirtualMode=Host_Only
 USB_OTG_FS.phy_itface=HCD_PHY_EMBEDDED
@@ -231,4 +292,4 @@ VP_SYS_VS_tim9.Signal=SYS_VS_tim9
 VP_TIM2_VS_ClockSourceINT.Mode=Internal
 VP_TIM2_VS_ClockSourceINT.Signal=TIM2_VS_ClockSourceINT
 board=custom
-isbadioc=false
+isbadioc=true
