--- a/firmware/PCB Oven Controller.ioc
+++ b/firmware/PCB Oven Controller.ioc
@@ -1,7 +1,21 @@
 #MicroXplorer Configuration settings - do not modify
-FREERTOS.IPParameters=Tasks01,configENABLE_FPU
+FATFS.BSP.number=1
+FATFS0.BSP.STBoard=false
+FATFS0.BSP.api=Unknown
+FATFS0.BSP.component=
+FATFS0.BSP.condition=
+FATFS0.BSP.i2caddr=0
+FATFS0.BSP.i2creg=
+FATFS0.BSP.instance=PB5
+FATFS0.BSP.ip=GPIO
+FATFS0.BSP.mode=Input
+FATFS0.BSP.name=Detect_SDIO
+FATFS0.BSP.semaphore=
+FATFS0.BSP.solution=PB5
+FREERTOS.IPParameters=Tasks01,configENABLE_FPU,configUSE_NEWLIB_REENTRANT
 FREERTOS.Tasks01=defaultTask,24,128,StartDefaultTask,Default,NULL,Dynamic,NULL,NULL
 FREERTOS.configENABLE_FPU=1
+FREERTOS.configUSE_NEWLIB_REENTRANT=1
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
 KeepUserPlacement=false
@@ -15,7 +29,8 @@ Mcu.IP12=TIM2
 Mcu.IP13=TIM3
 Mcu.IP14=USART1
 Mcu.IP15=USART2
-Mcu.IP16=USB_OTG_FS
+Mcu.IP16=USB_HOST
+Mcu.IP17=USB_OTG_FS
 Mcu.IP2=FREERTOS
 Mcu.IP3=I2C1
 Mcu.IP4=I2C3
@@ -24,51 +39,48 @@ Mcu.IP6=NVIC
 Mcu.IP7=RCC
 Mcu.IP8=RTC
 Mcu.IP9=SDIO
-Mcu.IPNb=17
+Mcu.IPNb=18
 Mcu.Name=STM32F411C(C-E)Ux
 Mcu.Package=UFQFPN48
-Mcu.Pin0=PC13-ANTI_TAMP
-Mcu.Pin1=PC14-OSC32_IN
-Mcu.Pin10=PA6
-Mcu.Pin11=PA7
-Mcu.Pin12=PB0
-Mcu.Pin13=PB1
-Mcu.Pin14=PB2
-Mcu.Pin15=PB10
-Mcu.Pin16=PB12
-Mcu.Pin17=PB13
-Mcu.Pin18=PB14
-Mcu.Pin19=PB15
-Mcu.Pin2=PC15-OSC32_OUT
-Mcu.Pin20=PA8
-Mcu.Pin21=PA9
-Mcu.Pin22=PA10
-Mcu.Pin23=PA11
-Mcu.Pin24=PA12
-Mcu.Pin25=PA13
-Mcu.Pin26=PA14
-Mcu.Pin27=PA15
-Mcu.Pin28=PB3
-Mcu.Pin29=PB4
-Mcu.Pin3=PH0 - OSC_IN
-Mcu.Pin30=PB6
-Mcu.Pin31=PB7
-Mcu.Pin32=PB8
-Mcu.Pin33=PB9
-Mcu.Pin34=VP_CRC_VS_CRC
-Mcu.Pin35=VP_FATFS_VS_SDIO
-Mcu.Pin36=VP_FREERTOS_VS_CMSIS_V2
-Mcu.Pin37=VP_IWDG_VS_IWDG
-Mcu.Pin38=VP_RTC_VS_RTC_Activate
-Mcu.Pin39=VP_SYS_VS_tim9
-Mcu.Pin4=PH1 - OSC_OUT
-Mcu.Pin40=VP_TIM2_VS_ClockSourceINT
-Mcu.Pin5=PA0-WKUP
-Mcu.Pin6=PA1
-Mcu.Pin7=PA2
-Mcu.Pin8=PA3
-Mcu.Pin9=PA5
-Mcu.PinsNb=41
+Mcu.Pin0=PH0 - OSC_IN
+Mcu.Pin1=PH1 - OSC_OUT
+Mcu.Pin10=PB12
+Mcu.Pin11=PB13
+Mcu.Pin12=PB14
+Mcu.Pin13=PB15
+Mcu.Pin14=PA8
+Mcu.Pin15=PA9
+Mcu.Pin16=PA10
+Mcu.Pin17=PA11
+Mcu.Pin18=PA12
+Mcu.Pin19=PA13
+Mcu.Pin2=PA2
+Mcu.Pin20=PA14
+Mcu.Pin21=PA15
+Mcu.Pin22=PB3
+Mcu.Pin23=PB4
+Mcu.Pin24=PB5
+Mcu.Pin25=PB6
+Mcu.Pin26=PB7
+Mcu.Pin27=PB8
+Mcu.Pin28=PB9
+Mcu.Pin29=VP_CRC_VS_CRC
+Mcu.Pin3=PA3
+Mcu.Pin30=VP_FATFS_VS_SDIO
+Mcu.Pin31=VP_FATFS_VS_USB
+Mcu.Pin32=VP_FREERTOS_VS_CMSIS_V2
+Mcu.Pin33=VP_IWDG_VS_IWDG
+Mcu.Pin34=VP_RTC_VS_RTC_Activate
+Mcu.Pin35=VP_SYS_VS_tim9
+Mcu.Pin36=VP_TIM2_VS_ClockSourceINT
+Mcu.Pin37=VP_USB_HOST_VS_USB_HOST_MSC_FS
+Mcu.Pin4=PA5
+Mcu.Pin5=PA6
+Mcu.Pin6=PA7
+Mcu.Pin7=PB0
+Mcu.Pin8=PB1
+Mcu.Pin9=PB10
+Mcu.PinsNb=38
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F411CEUx
@@ -80,6 +92,7 @@ NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:true
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:true
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:true
+NVIC.OTG_FS_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true\:true
 NVIC.PendSV_IRQn=true\:15\:0\:false\:false\:false\:true\:false\:false\:true
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:false\:false\:false\:false\:true
@@ -91,8 +104,6 @@ NVIC.TIM1_BRK_TIM9_IRQn=true\:15\:0\:false\:false\:true\:false\:false\:true\:tru
 NVIC.TimeBase=TIM1_BRK_TIM9_IRQn
 NVIC.TimeBaseIP=TIM9
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:true
-PA0-WKUP.Locked=true
-PA1.Locked=true
 PA10.GPIOParameters=GPIO_Label
 PA10.GPIO_Label=RX
 PA10.Mode=Asynchronous
@@ -120,8 +131,6 @@ PA2.GPIOParameters=GPIO_Label
 PA2.GPIO_Label=UART2_TX
 PA2.Mode=Asynchronous
 PA2.Signal=USART2_TX
-PA3.GPIOParameters=GPIO_Label
-PA3.GPIO_Label=UART2_RX
 PA3.Mode=Asynchronous
 PA3.Signal=USART2_RX
 PA5.GPIOParameters=GPIO_Label
@@ -136,32 +145,32 @@ PA7.Mode=Full_Duplex_Master
 PA7.Signal=SPI1_MOSI
 PA8.Mode=I2C
 PA8.Signal=I2C3_SCL
-PA9.GPIOParameters=GPIO_Label
-PA9.GPIO_Label=TX
 PA9.Mode=Asynchronous
 PA9.Signal=USART1_TX
 PB0.GPIOParameters=GPIO_Label
 PB0.GPIO_Label=DIMMER_SYNC
 PB0.Signal=S_TIM3_CH3
+PB1.GPIOParameters=GPIO_Label
+PB1.GPIO_Label=DRIVE_VBUS_FS
 PB1.Locked=true
+PB1.Signal=GPIO_Output
 PB10.GPIOParameters=GPIO_Label
 PB10.GPIO_Label=PWM1
 PB10.Signal=S_TIM2_CH3
 PB12.GPIOParameters=GPIO_Label
-PB12.GPIO_Label=GPIO2
+PB12.GPIO_Label=SPI_CS2
 PB12.Locked=true
-PB12.Signal=GPIO_Input
+PB12.Signal=GPIO_Output
 PB13.GPIOParameters=GPIO_Label
-PB13.GPIO_Label=GPIO1
+PB13.GPIO_Label=SPI_CS1
 PB13.Locked=true
-PB13.Signal=GPIO_Input
+PB13.Signal=GPIO_Output
 PB14.GPIOParameters=GPIO_Label
-PB14.GPIO_Label=GPIO0
+PB14.GPIO_Label=SPI_CS0
 PB14.Locked=true
-PB14.Signal=GPIO_Input
+PB14.Signal=GPIO_Output
 PB15.Mode=SD_1_bit
 PB15.Signal=SDIO_CK
-PB2.Locked=true
 PB3.GPIOParameters=GPIO_Label
 PB3.GPIO_Label=SWO
 PB3.Mode=Trace_Asynchronous_SW
@@ -170,6 +179,10 @@ PB4.GPIOParameters=GPIO_Label
 PB4.GPIO_Label=SPI_MISO
 PB4.Mode=Full_Duplex_Master
 PB4.Signal=SPI1_MISO
+PB5.GPIOParameters=GPIO_Label
+PB5.GPIO_Label=SDIO_IN
+PB5.Locked=true
+PB5.Signal=GPIO_Input
 PB6.Mode=I2C
 PB6.Signal=I2C1_SCL
 PB7.Mode=SD_1_bit
@@ -178,9 +191,6 @@ PB8.Mode=I2C
 PB8.Signal=I2C3_SDA
 PB9.Mode=I2C
 PB9.Signal=I2C1_SDA
-PC13-ANTI_TAMP.Locked=true
-PC14-OSC32_IN.Locked=true
-PC15-OSC32_OUT.Locked=true
 PH0\ -\ OSC_IN.GPIOParameters=GPIO_Label
 PH0\ -\ OSC_IN.GPIO_Label=HSE_IN
 PH0\ -\ OSC_IN.Mode=HSE-External-Oscillator
@@ -204,7 +214,7 @@ ProjectManager.FreePins=false
 ProjectManager.HalAssertFull=false
 ProjectManager.HeapSize=0x200
 ProjectManager.KeepUserCode=true
-ProjectManager.LastFirmware=true
+ProjectManager.LastFirmware=false
 ProjectManager.LibraryCopy=1
 ProjectManager.MainLocation=Core/Src
 ProjectManager.NoMain=false
@@ -217,7 +227,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_IWDG_Init-IWDG-false-HAL-true,4-MX_RTC_Init-RTC-false-HAL-true,5-MX_I2C1_Init-I2C1-false-HAL-true,6-MX_SDIO_SD_Init-SDIO-false-HAL-true,7-MX_CRC_Init-CRC-false-HAL-true,8-MX_TIM2_Init-TIM2-false-HAL-true,9-MX_FATFS_Init-FATFS-false-HAL-false,10-MX_I2C3_Init-I2C3-false-HAL-true,11-MX_SPI1_Init-SPI1-false-HAL-true,12-MX_USB_OTG_FS_HCD_Init-USB_OTG_FS-false-HAL-true,13-MX_USART1_UART_Init-USART1-false-HAL-true,14-MX_USART2_UART_Init-USART2-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_IWDG_Init-IWDG-false-HAL-true,4-MX_RTC_Init-RTC-false-HAL-true,5-MX_I2C1_Init-I2C1-false-HAL-true,6-MX_SDIO_SD_Init-SDIO-false-HAL-true,7-MX_CRC_Init-CRC-false-HAL-true,8-MX_TIM2_Init-TIM2-false-HAL-true,9-MX_FATFS_Init-FATFS-false-HAL-false,10-MX_I2C3_Init-I2C3-false-HAL-true,11-MX_SPI1_Init-SPI1-false-HAL-true,12-MX_USART1_UART_Init-USART1-false-HAL-true,13-MX_USART2_UART_Init-USART2-false-HAL-true,14-MX_TIM3_Init-TIM3-false-HAL-true,15-MX_USB_HOST_Init-USB_HOST-false-HAL-false
 RCC.48MHZClocksFreq_Value=48000000
 RCC.AHBFreq_Value=96000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV2
@@ -274,6 +284,22 @@ USART1.IPParameters=VirtualMode
 USART1.VirtualMode=VM_ASYNC
 USART2.IPParameters=VirtualMode
 USART2.VirtualMode=VM_ASYNC
+USB_HOST.BSP.number=1
+USB_HOST.IPParameters=VirtualModeFS,USBH_HandleTypeDef
+USB_HOST.USBH_HandleTypeDef=hUsbHostFS
+USB_HOST.VirtualModeFS=Msc
+USB_HOST0.BSP.STBoard=false
+USB_HOST0.BSP.api=Unknown
+USB_HOST0.BSP.component=
+USB_HOST0.BSP.condition=
+USB_HOST0.BSP.i2caddr=0
+USB_HOST0.BSP.i2creg=
+USB_HOST0.BSP.instance=I2C1
+USB_HOST0.BSP.ip=I2C
+USB_HOST0.BSP.mode=I2C
+USB_HOST0.BSP.name=Drive_VBUS_FS
+USB_HOST0.BSP.semaphore=
+USB_HOST0.BSP.solution=I2C1
 USB_OTG_FS.IPParameters=VirtualMode,phy_itface
 USB_OTG_FS.VirtualMode=Host_Only
 USB_OTG_FS.phy_itface=HCD_PHY_EMBEDDED
@@ -281,6 +307,8 @@ VP_CRC_VS_CRC.Mode=CRC_Activate
 VP_CRC_VS_CRC.Signal=CRC_VS_CRC
 VP_FATFS_VS_SDIO.Mode=SDIO
 VP_FATFS_VS_SDIO.Signal=FATFS_VS_SDIO
+VP_FATFS_VS_USB.Mode=USB
+VP_FATFS_VS_USB.Signal=FATFS_VS_USB
 VP_FREERTOS_VS_CMSIS_V2.Mode=CMSIS_V2
 VP_FREERTOS_VS_CMSIS_V2.Signal=FREERTOS_VS_CMSIS_V2
 VP_IWDG_VS_IWDG.Mode=IWDG_Activate
@@ -291,5 +319,7 @@ VP_SYS_VS_tim9.Mode=TIM9
 VP_SYS_VS_tim9.Signal=SYS_VS_tim9
 VP_TIM2_VS_ClockSourceINT.Mode=Internal
 VP_TIM2_VS_ClockSourceINT.Signal=TIM2_VS_ClockSourceINT
+VP_USB_HOST_VS_USB_HOST_MSC_FS.Mode=MSC_FS
+VP_USB_HOST_VS_USB_HOST_MSC_FS.Signal=USB_HOST_VS_USB_HOST_MSC_FS
 board=custom
-isbadioc=true
+isbadioc=false
